Fixed an error in the css that will break the products buttons

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -318,10 +318,13 @@ main{
     align-content: center;
     text-align: center;
     display: flex;
-    height:110%;
     justify-content: space-between;
     padding: 1rem; /* Adds padding for structure */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Optional for shadow */
+}
+
+.featured-product-card{
+    height:110%;
 }
 
 .card-title{
@@ -343,9 +346,7 @@ main{
 }
 
 .add-to-cart-btn{
-    max-width: 60%;
     align-self: center;
-    
 }
 
 .product-image {
